# Downloader

./: .gitignore  API_DOCUMENTATION.md  DOCUMENTATION.md  Dockerfile  PRODUCTION_SETUP.md  README.md  WEB_API_MIGRATION.md  debug_search.js  debug_series.js  debug_series_search.js  docker-compose.yml  ecosystem.config.js  middleware.ts  package-lock.json  package.json  sqlite.db  test-api-methods 2.mjs  test-direct-scrape.js  test-episode-scraping.js  test-fichier-button 2.mjs  test-filesize.mjs  test-irobot.js  test-joker 2.mjs  test-links.mjs  test-page-structure 2.mjs  test-plex-detection.mjs  test-plex-matching 2.mjs  test-plex-matching.mjs  test-pluribus.js  test-statfs.js  test-zt-client.mjs  test-zt-details 2.mjs  test-zt.mjs  verify-storage-action.ts  walkthrough.md  worker.ts
app/: actions.ts  globals.css  home-client.tsx  layout.tsx  page.tsx
backend/: .env.example  Dockerfile  Package.swift  README.md  pyproject.toml
backend/NodeAPI/: package-lock.json  package.json  wrapper.js  ztParser.js
backend/Sources/App/: configure.swift
backend/Sources/App/Commands/: CreateUserCommand.swift  SetApiKeyCommand.swift
backend/Sources/App/Controllers/: AuthController.swift  MoviesController.swift
backend/Sources/App/Models/: Setting.swift
backend/Sources/App/Services/: DownloadManager.swift  NetworkUtils.swift  ScraperService.swift  ZTScraper.swift
backend/app/: api.py  auth.py  config.py  db.py  main.py  models.py  schemas.py  security.py
backend/app/services/: downloader.py  joblog.py  plex.py
components/: auto-refresh.tsx  book-card.tsx  header.tsx  (+10 more)
(+74 files in other folders)
